src/test/deca/syntax/invalid/semi3.deca
//Description
//    Vérifier la considération des points virgules
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
println("3")
}
